kubernetes/main/templates/volsync/minio/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: volsync-${APP}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/created-by: volsync
      batch.kubernetes.io/job-name: volsync-src-${APP}
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    # kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    # Minio
    - to:
        - ipBlock:
            cidr: 10.1.1.3/32
      ports:
        - port: 80
          protocol: TCP
